# hieratika

./: .gitignore  .prettierignore  CREDITS.md  Cargo.toml  Makefile  README.md  cairo-starkware-none-softfloat.json  cairo-starkware-none.json  deny.toml  flake.nix  package.json  rustfmt.toml  workspace.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cairo.yml  docs.yml  rust.yml
compiler-rt/: README.md  Scarb.toml  cairo_project.toml
compiler-rt/src/: alloc.cairo  alu.cairo  crt0.cairo  integer.cairo  io.cairo  lib.cairo  memory.cairo  rtstate.cairo  utils.cairo
compiler-rt/src/alloc/: address.cairo  allocator.cairo
compiler-rt/src/alu/: abs.cairo  add.cairo  add_sat.cairo  add_with_overflow.cairo  and.cairo  ashr.cairo  bitreverse.cairo  bswap.cairo  ctlz.cairo  ctpop.cairo  fshl.cairo  fshr.cairo  icmp_eq.cairo  icmp_ne.cairo  icmp_sge.cairo  icmp_sgt.cairo  icmp_sle.cairo  icmp_slt.cairo  icmp_uge.cairo  icmp_ugt.cairo  icmp_ule.cairo  icmp_ult.cairo  lshr.cairo  mul.cairo  or.cairo  sadd_sat.cairo  sadd_with_overflow.cairo  scmp.cairo  sdiv.cairo  sext.cairo  shl.cairo  smax.cairo  smin.cairo  smul_with_overflow.cairo  srem.cairo  sshl_sat.cairo  ssub_sat.cairo  ssub_with_overflow.cairo  sub.cairo  test_case.cairo  (+13 more)
compiler-rt/src/alu/abs/: abs_i1.cairo  abs_i128.cairo  abs_i16.cairo  abs_i24.cairo  abs_i32.cairo  abs_i40.cairo  abs_i48.cairo  abs_i64.cairo  abs_i8.cairo
compiler-rt/src/alu/add/: add_i1.cairo  add_i128.cairo  add_i16.cairo  add_i24.cairo  add_i32.cairo  add_i40.cairo  add_i48.cairo  add_i64.cairo  add_i8.cairo
compiler-rt/src/alu/add_sat/: sadd_sat_i8.cairo  uadd_sat_i8.cairo
compiler-rt/src/alu/add_with_overflow/: sadd_with_overflow_i8.cairo  uadd_with_overflow_i8.cairo
compiler-rt/src/alu/and/: and_i1.cairo  and_i128.cairo  and_i16.cairo  and_i24.cairo  and_i32.cairo  and_i40.cairo  and_i48.cairo  and_i64.cairo  and_i8.cairo
compiler-rt/src/alu/ashr/: ashr_i1.cairo  ashr_i128.cairo  ashr_i16.cairo  ashr_i24.cairo  ashr_i32.cairo  ashr_i40.cairo  ashr_i48.cairo  ashr_i64.cairo  ashr_i8.cairo
compiler-rt/src/alu/bitreverse/: bitreverse_i1.cairo  bitreverse_i128.cairo  bitreverse_i16.cairo  bitreverse_i24.cairo  bitreverse_i32.cairo  bitreverse_i40.cairo  bitreverse_i48.cairo  bitreverse_i64.cairo  bitreverse_i8.cairo
compiler-rt/src/alu/bswap/: bswap_i128.cairo  bswap_i16.cairo  bswap_i24.cairo  bswap_i32.cairo  bswap_i40.cairo  bswap_i48.cairo  bswap_i64.cairo
compiler-rt/src/crt0/: allocator.cairo  memory.cairo  utils.cairo
compiler-rt/src/integer/: u24.cairo  u40.cairo  u48.cairo
crates/cairoc/: Cargo.toml  README.md
crates/cairoc/src/: export.rs  lib.rs
crates/cairoc/src/export/: lowered.rs  mod.rs  sierra.rs
crates/cairoc/test_data/: add.cairo
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  main.rs
crates/cli/test_data/: hieratika_cli_error_output.cairo  hieratika_cli_warning_output.cairo
crates/cli/tests/: hieratika_cli_error_output.rs  hieratika_cli_warning_output.rs
crates/compiler/: Cargo.toml  build.rs
crates/compiler/input/: opcodes.ll  square.ll  terminators.ll
crates/compiler/input/bug/: bug-111.ll
crates/compiler/input/compilation/: add.ll  alloc.ll  bad_data_layout.ll  bad_target_triple.ll  constants.ll  hieratika_rust_test_input.ll  opcodes.ll  phi.ll  terminators.ll
crates/compiler/input/pass/: declared_polyfill_bad_type.ll  declared_polyfill_correct_type.ll  redefined_polyfill.ll
crates/compiler/input/program/: add.ll  byte_array.ll  fibonacci_iter.ll  fibonacci_rec.ll  function_pointers.ll  pointer_punning.ll
crates/compiler/src/: config.rs  constant.rs  lib.rs  messages.rs  polyfill.rs
crates/compiler/src/context/: mod.rs
crates/compiler/src/llvm/: data_layout.rs  special_intrinsics.rs  typesystem.rs
crates/compiler/src/obj_gen/: data.rs  mod.rs  util.rs
crates/compiler/src/parser/: block_address.rs  constant_expr.rs  getelementptr_constant.rs  integer_constant.rs  inttoptr_constant.rs  mod.rs  number.rs  ptrtoint_constant.rs  typ.rs
crates/compiler/src/pass/: data.rs  mod.rs
crates/compiler/src/pass/analysis/: module_map.rs
crates/compiler/src/pass/check/: mod.rs  polyfill_redefinitions.rs
crates/compiler/src/polyfill/: mappings.rs  mod.rs
crates/compiler/tests/: bug_111.rs  compilation_alloc.rs  compilation_basic_add.rs  compilation_basic_opcodes.rs  compilation_compiler_builtins.rs  compilation_constants.rs  compilation_core.rs  compilation_invalid_target.rs  compilation_opcodes.rs  compilation_phi.rs  compilation_terminators.rs  execution_ir.rs  invalid_target.rs  program_byte_array.rs  program_fibonacci_iter.rs  program_fibonacci_rec.rs  program_function_pointers.rs  program_pointer_punning.rs
crates/compiler/tests/common/: mod.rs
crates/driver/: Cargo.toml
crates/driver/test_data/: square.cairo  square.ll
crates/driver/tests/: compare_llvm_ir_cairo_output.rs  execute_llvm_ir.rs
crates/emitter/: Cargo.toml  README.md
crates/emitter/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: backtrace.rs  compile.rs  lib.rs  mangle.rs
crates/error/src/compile/: cairo.rs  llvm.rs  mod.rs
crates/flat-lowered/: Cargo.toml  README.md
crates/flat-lowered/src/: lib.rs
crates/flat-lowered/test_data/: add.cairo
crates/flo/: Cargo.toml
crates/flo/src/: builders.rs  flo.rs  intern.rs  lib.rs  poison.rs  serdes.rs  types.rs
crates/flo/tests/: flo_test.rs
crates/lifter/: Cargo.toml  README.md
crates/lifter/src/: builder.rs  lib.rs
crates/lowerer/: Cargo.toml  README.md
crates/lowerer/src/: builder.rs  lib.rs
crates/lowering/: Cargo.toml
crates/lowering/src/: builder.rs  lib.rs
crates/mangler/: Cargo.toml  README.md
crates/mangler/src/: constants.rs  lib.rs  mapping.rs  util.rs
crates/rust-test-input/src/: lib.rs
crates/test-utils/: Cargo.toml  README.md
crates/test-utils/src/: lib.rs
demo/: cairo_project.toml  fib.c
docs/: ALU Design.md  CRT0.md  Custom Target.md  Memory Model.md  Name Mangling.md
tests/rust-test-input/: Cargo.toml  package.nix
tests/rust-test-input/src/: add.rs  lib.rs  sub.rs
(+479 files in other folders)
