# We use a workspace to centralize dependency and metadata management for the crates in this
# workspace.
[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/compiler",
  "crates/driver",
  "crates/error",
  "crates/cairoc",
  "crates/flo",
  "crates/test-utils",
]

# Cairo is excluded because it is imported as git submodule and it has its own Cargo workspace.
exclude = ["cairo", "tests"]

# Here we set keys that are relevant across all packages, allowing them to be inherited.
[workspace.package]
version = "0.1.0"
homepage = "https://github.com/reilabs/hieratika"
repository = "https://github.com/reilabs/hieratika"
license-file = "LICENSE"

authors = ["Reilabs"]
keywords = ["compiler", "starknet", "starkware"]
categories = ["compilers", "virtualization", "cryptography::cryptocurrencies"]

edition = "2021"
rust-version = "1.83.0"

# Dependencies that are used by more than one crate are specified here, allowing us to ensure that
# we match versions in all crates.
[workspace.dependencies]
anyhow = "1.0.89"
ariadne = "0.4.1"
bimap = { version = "0.6.3", features = ["serde"] }
cairo-lang-compiler = { path = "cairo/crates/cairo-lang-compiler" }
cairo-lang-diagnostics = { path = "cairo/crates/cairo-lang-diagnostics" }
cairo-lang-lowering = { path = "cairo/crates/cairo-lang-lowering" }
cairo-lang-runner = { path = "cairo/crates/cairo-lang-runner" }
cairo-lang-sierra = { path = "cairo/crates/cairo-lang-sierra" }
cairo-lang-sierra-generator = { path = "cairo/crates/cairo-lang-sierra-generator" }
cairo-lang-utils = { path = "cairo/crates/cairo-lang-utils" }
clap = { version = "4.5.16", features = ["derive", "cargo", "env"] }
ethnum = "1.5.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
itertools = "0.13.0"
hieratika-cairoc = { path = "crates/cairoc" }
hieratika-cli = { path = "crates/cli" }
hieratika-compiler = { path = "crates/compiler" }
hieratika-driver = { path = "crates/driver" }
hieratika-errors = { path = "crates/error" }
hieratika-flo = { path = "crates/flo" }
hieratika-test-utils = { path = "crates/test-utils" }
starknet-types-core = "0.1.7"
thiserror = "1.0.63"
tracing = "0.1.40"

[profile.release]
debug = true           # Include full debug information in release builds.
overflow-checks = true # Keep overflow checks in production builds.
lto = "thin"           # Thin LTO performs cheaper cross-crate LTO.
