# We use a workspace to centralize dependency and metadata management for the crates in this
# workspace.
[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/compiler",
  "crates/driver",
  "crates/error",
  "crates/cairoc",
  "crates/flo",
  "crates/test-utils",
  "crates/mangler",
  "crates/lifter",
]

# Cairo is excluded because it is imported as git submodule and it has its own Cargo workspace.
exclude = ["cairo", "tests"]

# Here we set keys that are relevant across all packages, allowing them to be inherited.
[workspace.package]
version = "0.1.0"
homepage = "https://github.com/reilabs/hieratika"
repository = "https://github.com/reilabs/hieratika"
license-file = "LICENSE"

authors = ["Reilabs"]
keywords = ["compiler", "starknet", "starkware"]
categories = ["compilers", "virtualization", "cryptography::cryptocurrencies"]

edition = "2021"
rust-version = "1.83.0"

# Dependencies that are used by more than one crate are specified here, allowing us to ensure that
# we match versions in all crates.
[workspace.dependencies]
anyhow = "1.0.89"
ariadne = "0.5.0"
backtrace = "0.3.74"
bimap = { version = "0.6.3", features = ["serde"] }
cairo-lang-compiler = { path = "cairo/crates/cairo-lang-compiler" }
cairo-lang-diagnostics = { path = "cairo/crates/cairo-lang-diagnostics" }
cairo-lang-lowering = { path = "cairo/crates/cairo-lang-lowering" }
cairo-lang-runner = { path = "cairo/crates/cairo-lang-runner" }
cairo-lang-sierra = { path = "cairo/crates/cairo-lang-sierra" }
cairo-lang-sierra-generator = { path = "cairo/crates/cairo-lang-sierra-generator" }
cairo-lang-utils = { path = "cairo/crates/cairo-lang-utils" }
clap = { version = "4.5.16", features = ["derive", "cargo", "env"] }
ethnum = "1.5.0"
inkwell = { git = "https://github.com/stevefan1999-personal/inkwell", rev = "0c1e5dd52cf3e012cb238ecfbdb3b1731b987c03", features = [
  "llvm19-0",
] }
itertools = "0.14.0"
hieratika-cairoc = { path = "crates/cairoc" }
hieratika-cli = { path = "crates/cli" }
hieratika-compiler = { path = "crates/compiler" }
hieratika-driver = { path = "crates/driver" }
hieratika-errors = { path = "crates/error" }
hieratika-flo = { path = "crates/flo" }
hieratika-mangler = { path = "crates/mangler" }
hieratika-test-utils = { path = "crates/test-utils" }
miette = { version = "7.4.0", features = ["fancy"] }
starknet-types-core = "0.1.7"
thiserror = "2.0.8"
hieratika-lifter = { path = "crates/lifter" }
tracing = "0.1.40"

[profile.release]
debug = true           # Include full debug information in release builds.
overflow-checks = true # Keep overflow checks in production builds.
lto = "thin"           # Thin LTO performs cheaper cross-crate LTO.

# Running the compiler tests in a reasonable time means we need to optimize,
# but we also want to retain debug assertions and debug information.
[profile.test]
opt-level = 1
debug = "full"
