# We use a workspace to centralize dependency and metadata management for the crates in this
# workspace.
[workspace]
resolver = "2"
members = [
  "crates/cairoc",
  "crates/cli",
  "crates/compiler",
  "crates/driver",
  "crates/emitter",
  "crates/error",
  "crates/flo",
  "crates/lifter",
  "crates/lowerer",
  "crates/mangler",
  "crates/test-utils",
]
default-members = ["crates/cli"]

# Cairo is excluded because it is imported as git submodule that has its own Cargo workspace.
exclude = ["cairo", "tests"]

# Here we set keys that are relevant across all packages, allowing them to be inherited.
[workspace.package]
version = "0.1.0"
homepage = "https://github.com/reilabs/hieratika"
repository = "https://github.com/reilabs/hieratika"
license-file = "LICENSE"

authors = ["Reilabs"]
keywords = ["compiler", "starknet", "starkware"]
categories = ["compilers", "virtualization", "cryptography::cryptocurrencies"]

edition = "2024"
rust-version = "1.86.0"

# Dependencies that are used by more than one crate are specified here, allowing us to ensure that
# we match versions in all crates.
[workspace.dependencies]
anyhow = "1.0.97"
backtrace = "0.3.74"
bimap = { version = "0.6.3", features = ["serde"] }
cairo-lang-compiler = { path = "cairo/crates/cairo-lang-compiler" }
cairo-lang-diagnostics = { path = "cairo/crates/cairo-lang-diagnostics" }
cairo-lang-lowering = { path = "cairo/crates/cairo-lang-lowering" }
cairo-lang-runner = { path = "cairo/crates/cairo-lang-runner" }
cairo-lang-sierra = { path = "cairo/crates/cairo-lang-sierra" }
cairo-lang-sierra-generator = { path = "cairo/crates/cairo-lang-sierra-generator" }
cairo-lang-utils = { path = "cairo/crates/cairo-lang-utils" }
clap = { version = "4.5.16", features = ["derive", "cargo", "env"] }
ethnum = "1.5.0"
inkwell = { git = "https://github.com/stevefan1999-personal/inkwell", rev = "0c1e5dd52cf3e012cb238ecfbdb3b1731b987c03", features = [
  "llvm19-0",
] }
itertools = "0.14.0"
hieratika-cairoc = { path = "crates/cairoc" }
hieratika-compiler = { path = "crates/compiler" }
hieratika-emitter = { path = "crates/emitter" }
hieratika-errors = { path = "crates/error" }
hieratika-flo = { path = "crates/flo" }
hieratika-lowerer = { path = "crates/lowerer" }
hieratika-mangler = { path = "crates/mangler" }
hieratika-test-utils = { path = "crates/test-utils" }
miette = { version = "7.5.0", features = ["fancy"] }
regex = "1.11.1"
starknet-types-core = "0.1.7"
thiserror = "2.0.12"
hieratika-lifter = { path = "crates/lifter" }

[profile.release]
debug = true           # Include full debug information in release builds.
overflow-checks = true # Keep overflow checks in production builds.
lto = "thin"           # Thin LTO performs cheaper cross-crate LTO.

# Running the compiler tests in a reasonable time means we need to optimize,
# but we also want to retain debug assertions and debug information.
[profile.dev]
opt-level = 1
debug = "full"
