[package]
name = "hieratika-cairoc"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "Generates FLO objects from Cairo projects."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-defs = { path = "../../cairo/crates/cairo-lang-defs" }
cairo-lang-filesystem = { path = "../../cairo/crates/cairo-lang-filesystem" }
cairo-lang-lowering.workspace = true
cairo-lang-semantic = { path = "../../cairo/crates/cairo-lang-semantic" }
cairo-lang-sierra-generator.workspace = true
cairo-lang-utils.workspace = true
hieratika-errors.workspace = true
itertools.workspace = true

[dev-dependencies]
itertools.workspace = true
miette.workspace = true
rayon = "1.10.0"
