[package]
name = "hieratika-cli"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "Hieratika CLI allows users to interact with the Hieratika compilation process."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
smol_str = "0.3.2"
tempfile = "3.20.0"
anyhow.workspace = true
cairo-lang-runner = { path = "../../cairo/crates/cairo-lang-runner" }
cairo-lang-utils = { path = "../../cairo/crates/cairo-lang-utils" }
clap.workspace = true
exitcode = "1.1.2"
hieratika-cairoc.workspace = true
hieratika-compiler.workspace = true
hieratika-emitter.workspace = true
hieratika-lifter.workspace = true
hieratika-lowerer.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
indoc = "2.0.6"

[[bin]]
name = "hieratika"
path = "src/main.rs"
