[package]
name = "hieratika-compiler"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "A compiler to allow LLVM bytecode to run on the Starknet ecosystem in a provable fashion."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
bimap.workspace = true
chumsky = "0.9.3"
clap.workspace = true
derivative = "2.2.0"
downcast-rs = "1.2.1"
ethnum.workspace = true
inkwell.workspace = true
itertools.workspace = true
hieratika-errors.workspace = true
hieratika-flo.workspace = true
ouroboros = "0.18.4"
tracing.workspace = true
rand = "0.8.5"

[dev-dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-runner = { path = "../../cairo/crates/cairo-lang-runner" }
cairo-lang-sierra = { path = "../../cairo/crates/cairo-lang-sierra" }
cairo-lang-sierra-generator = { path = "../../cairo/crates/cairo-lang-sierra-generator" }
cairo-lang-utils = { path = "../../cairo/crates/cairo-lang-utils" }
hieratika-cairoc.workspace = true
