[package]
name = "hieratika-driver"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The compiler driver responsible for plumbing together the various portions of the compilation process."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
anyhow.workspace = true
hieratika-test-utils.workspace = true
starknet-types-core = "0.1.7"
