[package]
name = "hieratika-emitter"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "A tool to emit sierra from a Hieratika FLO."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-filesystem = { path = "../../cairo/crates/cairo-lang-filesystem" }
cairo-lang-runner = { path = "../../cairo/crates/cairo-lang-runner" }
cairo-lang-sierra = { path = "../../cairo/crates/cairo-lang-sierra" }
cairo-lang-utils = { path = "../../cairo/crates/cairo-lang-utils" }
hieratika-cairoc.workspace = true
hieratika-compiler.workspace = true
hieratika-errors.workspace = true
hieratika-flo.workspace = true
hieratika-lowerer.workspace = true
