[package]
name = "hieratika-errors"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The error types used by the Hieratika project."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
backtrace.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-lowering.workspace = true
inkwell.workspace = true
itertools.workspace = true
miette.workspace = true
thiserror.workspace = true
