[package]
name = "hieratika-test-utils"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

authors.workspace = true
description = "The utilities to test Hieratika."
keywords.workspace = true
categories.workspace = true

edition.workspace = true
rust-version.workspace = true

# Make these specifically impossible to publish as they have no independent use.
publish = false

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-utils.workspace = true
hieratika-cairoc.workspace = true
hieratika-errors.workspace = true
inkwell.workspace = true
starknet-types-core = "0.1.7"
